fix: del horizontal scroll

--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -25,7 +25,7 @@
 .main__about-project-timeline{
     display: grid;
     width: 100%;
-    grid-template-columns: fit-content(100%) auto;
+    grid-template-columns: 20% auto;
     justify-items: center;
     list-style-type: none;
     padding: 97px 0 99px 0;
@@ -35,7 +35,6 @@
     text-align: center;
     width: 100%;
     min-width: 50%;
-    padding: 0 10px;
 }
 .main__about-project-timeline-item-title{
     display: grid;
